--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+#full-height-element {
+  height: 100vh;
+  overflow-y: auto;
+}
