--- a/src/screens/components/Navbar.css
+++ b/src/screens/components/Navbar.css
@@ -1,230 +1,218 @@
 body {
-    font-family: "Poppins";
-    font-size: 18px;
-    margin: 0;
-    height: 100vh;
-    /* background: #161617; */
-    color: #fff;
-  }
-  
-  :root {
-    --color-primary: #4b6aff;
-  }
-  
-  ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  
-  nav {
-    display: flex;
-    align-items: center;
-    /* justify-content: space-between; */
-    padding: 10px 30px 0;
-    background-color: #fff;
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-    
+  font-family: "Poppins";
+  font-size: 18px;
+  margin: 0;
+  height: 100vh;
+  /* background: #161617; */
+  color: #fff;
+}
 
-  }
-  
-  nav > :is(h1, span.material-symbols-outlined) {
-   
-    
-    width: 34px;
-    height: 34px;
-    display: grid;
-    place-items: center;
-  }
-  
-  nav h1 {
-    background: #343950;
-    border-radius: 8px;
-    font-size: 16px;
-    width: 34px;
-    height: 34px;
-    display: grid;
-    place-items: center;
-  
-  }
-  
-  nav span {
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  a {
-    cursor: pointer;
-  }
-  
-  .menu {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    /* justify-content: center; */
-    /* justify-content: space-between; */
-    /* align-items: stretch; */
-    height: 70px;
-    z-index: 999;
-   
-    /* width: 50%; */
-  }
-  /* .sticky-nav {
+:root {
+  --color-primary: #4b6aff;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  /* justify-content: space-between; */
+  padding: 10px 30px 0;
+  background-color: #fff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+nav > :is(h1, span.material-symbols-outlined) {
+  width: 34px;
+  height: 34px;
+  display: grid;
+  place-items: center;
+}
+
+nav h1 {
+  background: #343950;
+  border-radius: 8px;
+  font-size: 16px;
+  width: 34px;
+  height: 34px;
+  display: grid;
+  place-items: center;
+}
+
+nav span {
+  color: #fff;
+  font-size: 20px;
+}
+
+a {
+  cursor: pointer;
+}
+
+.menu {
+  margin: 0;
+  padding: 0;
+  display: none;
+  /* justify-content: center; */
+  /* justify-content: space-between; */
+  /* align-items: stretch; */
+  height: 70px;
+  z-index: 999;
+
+  /* width: 50%; */
+}
+/* .sticky-nav {
     position: fixed;
     top: 0;
     left: 0;
 } */
-  
-  .menu li {
-    display: flex;
-    margin-right: 10px;
-    /* width: 80px; */
-    color: #999;
-    transition: all 0.3s ease-in-out;
 
-  }
-  
-  .menu li:hover .submenu {
-     height: auto;
-     
+.menu li {
+  display: flex;
+  margin-right: 10px;
+  /* width: 80px; */
+  color: #999;
+  transition: all 0.3s ease-in-out;
+}
 
-    }
-  
-  /* .menu > li:hover > a {
+.menu li:hover .submenu {
+  height: auto;
+}
+
+/* .menu > li:hover > a {
     color: #fff;
   } */
-  
-  .menu > li:hover > a::before {
-    visibility: visible;
-    scale: 1 1;
-  }
-  
-  .submenu {
-    overflow: hidden;
-    position: absolute;
-  
-    display: flex;
-    top: 8vh;
-    
-    /* justify-content: center; */
-    /* align-items: stretch; */
-    box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
-    /* flex-direction: row; */
-    animation: fadeIn 0.5s;
-    animation-fill-mode: forwards;
-    background-color: #fff;
-    height: 0;
-    /* line-height: 40px; */
-    /* box-sizing: border-box; */
-    transition: height 0.3s ease-in-out;
-   
- 
-  }
 
-  
-  .menu li .submenu a {
-    color:black;
-    opacity: 0;
-    font-size: 16px;
-    transition: opacity 0.25s;
-  }
-  
-  .menu > li:hover .submenu a {
-    opacity: 1;
-    color:black;
+.menu > li:hover > a::before {
+  visibility: visible;
+  scale: 1 1;
+}
 
-  }
-  
-  /* .menu > li .submenu a:hover {
+.submenu {
+  overflow: hidden;
+  position: absolute;
+
+  display: flex;
+  top: 8vh;
+
+  /* justify-content: center; */
+  /* align-items: stretch; */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  /* flex-direction: row; */
+  animation: fadeIn 0.5s;
+  animation-fill-mode: forwards;
+  background-color: #fff;
+  height: 0;
+  /* line-height: 40px; */
+  /* box-sizing: border-box; */
+  transition: height 0.3s ease-in-out;
+}
+
+.menu li .submenu a {
+  color: black;
+  opacity: 0;
+  font-size: 16px;
+  transition: opacity 0.25s;
+}
+
+.menu > li:hover .submenu a {
+  opacity: 1;
+  color: black;
+}
+
+/* .menu > li .submenu a:hover {
     background: rgb(0 0 0 / 20%);
   } */
-  
-  .menu > li a {
+
+.menu > li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 7px;
+  font-size: 16px;
+  text-decoration: none;
+  position: relative;
+  height: 100%;
+  transition: 0.3s;
+}
+
+.menu > li > a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: 3px;
+  left: 0px;
+  background-color: var(--color-primary);
+  transition: all 0.2s ease-in-out;
+  scale: 0 0;
+  /* visibility: hidden; */
+}
+
+.dashboard-search-bar {
+  display: flex;
+  font-size: 14px;
+  /* /* height: 20px; */
+  line-height: 24px;
+  /* color: #696e79; */
+  /* -webkit-box-sizing: content-box; */
+  /* box-sizing: content-box; */
+  padding: 5px;
+  margin: 0;
+  border: 1px solid #f5f5f6;
+  /* border-radius: 0 4px 4px 0; */
+  border-left: 0;
+  background: #f5f5f6;
+  border-radius: 10px;
+  width: 40%;
+  justify-content: flex-start;
+}
+
+.inputStyle {
+  outline: 0;
+  border: 0px;
+  background: #f5f5f6;
+  color: #696e79;
+  /* background-color: red; */
+  width: 100%;
+}
+
+.seperator {
+  border-bottom: 2px solid lightgray;
+  height: 1px;
+}
+
+.sub_section_title:hover {
+  font-weight: 700;
+}
+
+.profile-nav-bar {
+  display: flex;
+  width: 18%;
+  justify-content: flex-end;
+}
+
+.profile-nav-bar-icon {
+  cursor: pointer;
+  color: #343950;
+  /* margin-right: 5px; */
+}
+
+.login-button-option {
+  margin-top: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  margin-left: 5px;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
+  display: inline-block;
+  padding: 10px;
+}
+@media (min-width: 1024px) {
+  .menu {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 7px;
-    font-size: 16px;
-    text-decoration: none;
-    position: relative;
-    height: 100%;
-    transition: 0.3s;
   }
-  
-  .menu > li > a::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    bottom: 3px;
-    left: 0px;
-    background-color: var(--color-primary);
-    transition: all 0.2s ease-in-out;
-    scale: 0 0;
-    visibility: hidden;
-  }
-
-  .dashboard-search-bar{
-    display:flex;
-    font-size: 14px;
-    /* /* height: 20px; */
-    line-height: 24px;
-    /* color: #696e79; */
-    /* -webkit-box-sizing: content-box; */
-    /* box-sizing: content-box; */
-    padding: 5px;
-    margin: 0;
-    border: 1px solid #f5f5f6;
-    /* border-radius: 0 4px 4px 0; */
-    border-left: 0;
-    background: #f5f5f6;
-    border-radius: 10px;
-    width: 40%;
-    justify-content: flex-start;
-  }
-  
-  .inputStyle{
-    outline: 0;
-    border: 0px;
-    background: #f5f5f6;
-    color: #696e79;
-/* background-color: red; */
-    width: 100%;
-  }
-
-  .seperator{
-    border-bottom: 2px solid lightgray;
-    height: 1px;
-  }
-
-  
-
- 
-
-  .sub_section_title:hover{
-    font-weight: 700;
-  }
-
-  .profile-nav-bar{
-    display: flex;
-    width: 18%;
-    justify-content: flex-end;
-  }
-
-  .profile-nav-bar-icon{
-cursor: pointer;
-color: #343950;
-/* margin-right: 5px; */
-  }
-
-  .login-button-option{      
-    margin-top:  5px;
-    border: 1px solid rgba(0, 0, 0, 0.05);
-    margin-left: 5px;
-    border-radius: 5px;
-    background-color: white;
-    cursor: pointer;
-    display: inline-block;
-    padding: 10px;
-  
-  }
+}
